# CaPy-v2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVLOG.md  Dockerfile  Makefile  README.md  TECHNICAL_REPORT.md  capy_v2_fsd.md  capy_v2_prd.md  pyproject.toml
.claude/: settings.json
.claude/skills/devlog/: SKILL.md
.github/workflows/: test.yml
configs/: default.yaml
configs/ablation/: core.yaml
configs/data/: lincs.yaml
configs/model/: bi_mol_expr.yaml  bi_mol_morph.yaml  bi_morph_expr.yaml  tri_modal.yaml
configs/training/: default.yaml  staged.yaml
notebooks/: colab_training.ipynb  demo.ipynb
results/: ablation_comparison.tex  ablation_runs.jsonl  ablation_summary.csv  retrieval_table.csv  retrieval_table.tex
scripts/: analyze_checkpoints.py  diagnose.py  download.py  evaluate.py  preprocess.py  run_ablations.py  summarize_ablations.py  train.py  verify_signal.py
src/data/: audit.py  dataset.py  download.py  featurize.py  preprocess.py
src/evaluation/: clustering.py  diagnostics.py  report.py  retrieval.py
src/models/: capy.py  encoders.py  losses.py  projections.py
src/training/: trainer.py
src/utils/: config.py  logging.py  seeding.py
tests/: conftest.py  test_ablations.py  test_clustering.py  test_data.py  test_featurize.py  test_logging.py  test_losses.py  test_models.py  test_report.py  test_retrieval.py  test_seeding.py  test_summarize.py  test_training.py
