[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capy-v2"
version = "0.1.0"
description = "Tri-modal contrastive learning for drug discovery"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Hoang Ngo"}]
keywords = [
    "contrastive-learning",
    "drug-discovery",
    "multi-modal",
    "cell-painting",
    "L1000",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "torch>=2.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "rdkit>=2023.9",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pyarrow>=14.0",
    "pubchempy>=1.0",
    "umap-learn>=0.5",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "requests>=2.31",
    "cmapPy>=4.0",
]

[project.urls]
Homepage = "https://github.com/ogngnaoh/CaPy-v2"
Repository = "https://github.com/ogngnaoh/CaPy-v2"
Issues = "https://github.com/ogngnaoh/CaPy-v2/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.3",
    "pre-commit>=3.0",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = ["integration: marks tests requiring network (deselect with '-m not integration')"]
